force-app/main/default/objects/Individual_Repair_Item__c/Individual_Repair_Item__c.object-meta.xml
<CustomObject>
    <label>Individual Repair Item</label>
    <nameField>
        <label>Individual Repair Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Repair Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>