force-app/main/default/objects/Individual_Repair_Item__c/fields/Service_Booking__c.field-meta.xml
<CustomField>
    <fullName>Service_Booking__c</fullName>
    <label>Service Booking</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipName>Individual_Repair_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>